--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <canvas id="board"></canvas>
-
+    <audio class="jumpAudio" src="retro-jump-1-236684.mp3"></audio>
+    <audio class="gameOverAudio" src="game-over-38511.mp3"></audio>
 </body>
 </html>
